# SettingsGuide

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CuraSettingsGuide.py  GuideTheme.py  LICENSE.md  MenuItemHandler.py  QtMarkdownRenderer.py  README.md  SVGImage.py  ScreenshotTool.py  SettingsModel.py  __init__.py  contributing.md  plugin.json  plugin.json.in
.github/workflows/: ctest.yml
DoNotIncludeToPackage/: optimizer.py
cmake/: [Content_Types].xml  package.json.in
cmake/_rels/: .rels  package.json.rels
resources/: settings_guide_definitions.def.json  settings_guide_definitions_2000006.def.json  settings_guide_definitions_2000008.def.json
resources/articles/: acceleration_enabled.md  acceleration_layer_0.md  acceleration_prime_tower.md  acceleration_print.md  acceleration_roofing.md  acceleration_support_infill.md  acceleration_support_interface.md  acceleration_support_roof.md  acceleration_wall_x.md  adaptive_layer_height_enabled.md  adaptive_layer_height_threshold.md  adaptive_layer_height_variation.md  adaptive_layer_height_variation_step.md  adhesion_type.md  alternate_extra_perimeter.md  bottom_layers.md  bottom_skin_expand_distance.md  bottom_skin_preshrink.md  bottom_thickness.md  bridge_enable_more_layers.md  bridge_fan_speed.md  bridge_fan_speed_2.md  bridge_settings_enabled.md  bridge_skin_material_flow.md  bridge_skin_material_flow_2.md  bridge_skin_speed_2.md  bridge_skin_speed_3.md  bridge_wall_coast.md  bridge_wall_material_flow.md  bridge_wall_min_length.md  bridge_wall_speed.md  brim_line_count.md  brim_replaces_support.md  brim_width.md  build_volume_temperature.md  coasting_enable.md  coasting_speed.md  connect_infill_polygons.md  connect_skin_polygons.md  contributors.md  (+270 more)
resources/articles/about/: contributors.md  glossary.md  preferences.md
resources/articles/blackmagic/: magic_mesh_surface_mode.md  magic_spiralize.md  mold_angle.md  mold_enabled.md  mold_width.md  print_sequence.md  relative_extrusion.md  smooth_spiralized_contours.md
resources/articles/cooling/: cool_fan_enabled.md  cool_fan_full_at_height.md  cool_fan_full_layer.md  cool_fan_speed.md  cool_fan_speed_0.md  cool_fan_speed_max.md  cool_fan_speed_min.md  cool_lift_head.md  cool_min_layer_time.md  cool_min_layer_time_fan_speed_max.md  cool_min_speed.md
resources/articles/dual/: ooze_shield_angle.md  ooze_shield_dist.md  ooze_shield_enabled.md  prime_tower_brim_enable.md  prime_tower_circular.md  prime_tower_enable.md  prime_tower_min_volume.md  prime_tower_position_x.md  prime_tower_position_y.md  prime_tower_size.md  prime_tower_wipe_enabled.md  switch_extruder_prime_speed.md  switch_extruder_retraction_amount.md  switch_extruder_retraction_speed.md  switch_extruder_retraction_speeds.md
resources/articles/experimental/: adaptive_layer_height_enabled.md  adaptive_layer_height_threshold.md  adaptive_layer_height_variation_step.md  bridge_fan_speed.md  bridge_fan_speed_2.md  bridge_fan_speed_3.md  bridge_settings_enabled.md  bridge_skin_density.md  bridge_skin_density_2.md  bridge_skin_density_3.md  bridge_skin_material_flow.md  bridge_skin_material_flow_3.md  bridge_skin_speed.md  bridge_skin_speed_2.md  bridge_skin_speed_3.md  bridge_skin_support_threshold.md  bridge_sparse_infill_max_density.md  bridge_wall_coast.md  bridge_wall_min_length.md  bridge_wall_speed.md  clean_between_layers.md  coasting_enable.md  coasting_min_volume.md  coasting_speed.md  coasting_volume.md  conical_overhang_angle.md  conical_overhang_enabled.md  cross_infill_density_image.md  cross_infill_pocket_size.md  cross_support_density_image.md  draft_shield_dist.md  draft_shield_enabled.md  draft_shield_height.md  draft_shield_height_limitation.md  flow_rate_extrusion_offset_factor.md  flow_rate_max_extrusion_offset.md  magic_fuzzy_skin_enabled.md  magic_fuzzy_skin_outside_only.md  magic_fuzzy_skin_point_dist.md  magic_fuzzy_skin_thickness.md  (+69 more)
resources/descriptions/: acceleration_enabled.json  acceleration_enabled.md  acceleration_ironing.json  acceleration_print.json  acceleration_print.md  adhesion_extruder_nr.json  adhesion_type.json  adhesion_type.md  alternate_carve_order.json  alternate_extra_perimeter.json  alternate_extra_perimeter.md  bottom_layers.json  bottom_layers.md  bottom_skin_expand_distance.json  bottom_skin_expand_distance.md  bottom_skin_preshrink.json  bottom_skin_preshrink.md  bottom_thickness.json  bottom_thickness.md  brim_line_count.json  brim_line_count.md  brim_outside_only.json  brim_outside_only.md  brim_width.json  brim_width.md  carve_multiple_volumes.json  carve_multiple_volumes.md  connect_infill_polygons.md  connect_skin_polygons.json  connect_skin_polygons.md  cool_fan_enabled.json  cool_fan_full_at_height.json  cool_fan_full_at_height.md  cool_fan_full_layer.json  cool_fan_full_layer.md  cool_fan_speed.json  cool_fan_speed.md  cool_fan_speed_0.json  cool_fan_speed_0.md  cool_fan_speed_max.json  (+367 more)
resources/icons/: createdBy.data
resources/models/: arrow.scad  barn.scad  basic_overhang.scad  bridge.scad  calendar_holder.scad  castle.scad  castle_low.scad  clamp.scad  cooking_utensil_hook.scad  cube.scad  cube_missing_corner.py  curved_top.scad  cylinder.scad  d1.scad  dial_brace.scad  dimple_big.scad  dowel.scad  duct.scad  external_attachment.py  extra_surface.py  f.scad  f3.scad  fillet.scad  flipper_grip.scad  foothold.scad  gazebo2.scad  gear.scad  gear_hollow.scad  gear_knurled.scad  gutter_lift.scad  half_sphere.scad  headphone_hook.scad  hex_foot.scad  hexagonal_prism.scad  hexasphericon.scad  hive.scad  holes_cutout.scad  holes_in_panel.scad  intersecting_cubes.py  label.scad  (+55 more)
resources/qml/: ArticleCheckbox.qml  ArticleImages.qml  ArticleText.qml  CreatedBy.qml  DescriptionImages.qml  DescriptionText.qml  SettingsGuide.qml  SettingsSidebar.qml  TranslationButton.qml
resources/qml_cura4/: ArticleImages.qml  ArticleText.qml  SettingsGuide.qml  TranslationButton.qml
src/: CuraSettingsGuide.py  GuideTheme.py  MenuItemHandler.py  SettingsModel.py
test/: links.py  markdown_syntax.py  settings_guide_definitions.def.json
(+5524 files in other folders)
